--- a/Syllabus/Syllabus.tex
+++ b/Syllabus/Syllabus.tex
@@ -237,12 +237,19 @@ not be able to repeat SOCI 300 for forgiveness.}
 \hypertarget{important-dates}{%
 \subsection{Important Dates}\label{important-dates}}
 
-Sept.~2nd - Last day to drop without instructor's approval\\
-Oct.~24th - Last day to drop and receive financial credit for refund\\
-Nov.~10th - Last day to drop or withdraw\\
-See the
-\href{https://www.csuchico.edu/apss/calendar/aca-cal-2022-23.shtml}{2022-2023
-Academic Calendar} for more information.
+\begin{itemize}
+\tightlist
+\item
+  Sept.~2nd - Last day to drop without instructor's approval\\
+\item
+  Oct.~24th - Last day to drop and receive financial credit for refund\\
+\item
+  Nov.~10th - Last day to drop or withdraw\\
+\item
+  See the
+  \href{https://www.csuchico.edu/apss/calendar/aca-cal-2022-23.shtml}{2022-2023
+  Academic Calendar} for more information.
+\end{itemize}
 
 \hypertarget{course-readings}{%
 \section{Course Readings}\label{course-readings}}
@@ -284,11 +291,13 @@ Course}\label{structure-and-character-of-a-chicoflex-course}}
   Blackboard Learn}. At Chico State, ``this class meets at set
   days/times in-person (requiring social distancing and face coverings)
   and is paired with another section taught simultaneously online by the
-  same instructor.'' This means that this class includes campus students
-  who come to a physical class, online students who show up ``live,''
-  and online students who watch the archived lectures. Therefore, it is
-  the student's responsibility to check Blackboard Learn regularly and
-  to check in with the professor or review the Syllabus re: any
+  same instructor.''
+  \textcolor{cyan}{Days and times will use Pacific Standard Time (PST).}
+  This means that this class includes campus students who come to a
+  physical class, online students who show up ``live,'' and online
+  students who watch the archived lectures. Therefore, it is the
+  student's responsibility to check Blackboard Learn regularly and to
+  check in with the professor or review the Syllabus re: any
   administrative questions. \emph{Students are required to email the
   instructor from Blackboard Learn (this will ensure instructor access
   to emails).}
@@ -307,24 +316,25 @@ Course}\label{structure-and-character-of-a-chicoflex-course}}
 \item
   Occasional problems with technology are a common part of the modern
   university experience. If you have any technical difficulties, you
-  \textbf{should call the university technology folks at 530-898-6000}.
-  After you call them, if they are not able to resolve the issue, please
-  email me with a description of the problem, the name of the person you
-  spoke to in that office, what they and/or you are doing to resolve the
-  problem, and the expected timeline for its resolution. If you are
-  having trouble with Blackboard Learn during a quiz or other
-  assignment, take a screen shot or photo of the computer screen and the
-  error message you receive and email it to me AND contact ITSS at
-  530-898-6000. If you experience technical difficulties while
-  submitting an assignment, call ITSS at 1-800-898-6000 and send a copy
-  of the assignment to me via Blackboard Learn. If any of these things
-  happen when ITSS is closed, please follow up with them immediately the
-  next business day. You MUST contact ITSS to resolve the issue if you
-  are asking for any kind of leniency or extension.
+  \href{https://www.csuchico.edu/itss/}{\textbf{should call IT Support
+  Services (ITSS) at 530-898-6000}}. After you call them, if they are
+  not able to resolve the issue, please email me with a description of
+  the problem, the name of the person you spoke to in that office, what
+  they and/or you are doing to resolve the problem, and the expected
+  timeline for its resolution. If you are having trouble with Blackboard
+  Learn during a quiz or other assignment, take a screen shot or photo
+  of the computer screen and the error message you receive and email it
+  to me AND contact ITSS at 530-898-6000. If you experience technical
+  difficulties while submitting an assignment, call ITSS at
+  1-800-898-6000 and send a copy of the assignment to me via Blackboard
+  Learn. If any of these things happen when ITSS is closed, please
+  follow up with them immediately the next business day. You MUST
+  contact ITSS to resolve the issue if you are asking for any kind of
+  leniency or extension.
 \end{itemize}
 
-\hypertarget{covid-policy}{%
-\section{COVID policy}\label{covid-policy}}
+\hypertarget{covid_policy}{%
+\section{COVID policy}\label{covid_policy}}
 
 \href{https://calstate.policystat.com/policy/11030468/latest/}{Per the
 California State University Chancellor's Office policy, the Covid-19
@@ -454,14 +464,11 @@ weighed according to the following components:
 \toprule
 \textbf{Item} & \textbf{\% of Final Grade}\\
 \midrule
-Attendance \& Participation & 15 \%\\
-Weekly Perusall Participation \& Discussion & 15 \%\\
-Quizzes & 15 \%\\
-Three (3) Writing Assignments & 25 \%\\
-Final Paper & 30 \%\\
-\addlinespace
-\textbf{TOTAL} & \textbf{100 \%}\\
-\midrule
+Attendance \& Participation & 10 \%\\
+Weekly Perusall Participation \& Discussion & 10 \%\\
+Quizzes & 20 \%\\
+Analytical Response Papers & 60 \%\\
+TOTAL & 100 \%\\
 \bottomrule
 \end{tabular}
 \end{table}
@@ -495,8 +502,8 @@ to class having read and taken notes on all material. Furthermore, you
 are expected to contribute to discussions either in class or via class
 assignments. Grading of all work is done with the expectation that
 attendance and participation will be rewarded in the final grade. Also,
-see ``COVID Directions'' (above) if you are symptomatic and an in-class
-student.
+\protect\hyperlink{covid_policy}{see ``COVID Policy'' section} above if
+you are symptomatic and an in-class student.
 
 In addition to completing all of the assigned reading before each
 designated day of the week (see reading schedule below and make sure you
@@ -505,6 +512,7 @@ reflect on what is interesting/troubling/useful about what you have
 read. You are expected to do this work on your own. Be prepared to offer
 your questions, insights, and critique either via communication with me,
 writing assignments and/or in conversation with other students.
+
 \emph{These are questions you should consider as you complete each
 reading:} What are the authors' main objectives/research questions? What
 methods, if any, did the author use to explore this question? What are
@@ -519,11 +527,11 @@ also crucial to doing well in this class. In the context of this class,
 attendance means COMPLETING ALL OF THE ASSIGNMENTS, QUIZZES, INDIVIDUAL
 WORK, etc.} \emph{I usually have a very strict attendance policy.}
 
-\hypertarget{weekly-perusall-participation-15-of-final-grade}{%
-\subsection{Weekly Perusall Participation (15\% of Final
-Grade)}\label{weekly-perusall-participation-15-of-final-grade}}
+\hypertarget{weekly-perusall-participation-10-of-final-grade}{%
+\subsection{Weekly Perusall Participation (10\% of Final
+Grade)}\label{weekly-perusall-participation-10-of-final-grade}}
 
-For reading we will use
+For reading the primary texts (and not the textbook) we will use
 \href{https://support.perusall.com/hc/en-us}{Perusall}, a social
 annotation tool that allows students and their instructors to
 collaboratively markup .pdf documents. Instead of only reading a
@@ -580,20 +588,19 @@ comments?} Elaborate on a specific topic, connect to personal experience
 or perspective, extension to another topic or perspective, paraphrase
 part of the text.
 
-\hypertarget{quizzes-15-of-final-grade}{%
-\subsection{Quizzes (15\% of Final
-Grade)}\label{quizzes-15-of-final-grade}}
+\hypertarget{quizzes}{%
+\subsection{Quizzes (20\% of Final Grade; 5\% each)}\label{quizzes}}
 
-Throughout the course, I will ask students to synthesize, analyze,
-and/or apply contemporary social theories and readings from the previous
-day(s) or week(s) via a fairly short, intense quiz (typically, 3-10
-multiple-choice and/or short answer questions). The quiz closes after
-the posted due date. In order to avoid missing a quiz and any
-announcements I have, make sure you check Blackboard Learn every single
-day of the week. The quiz closes after the posted due date. In order to
-avoid missing a quiz and any announcements I have, make sure you check
-Blackboard Learn every single day of the week. \emph{No quiz will be
-assigned the week a writing assignment is due.}
+Four quizzes are required in this class. The quizzes will cover
+theories, ideas, and concepts from the course readings and lectures. All
+four required reading quizzes will be posted electronically on Thursday
+at 4:00 p.m. and must be completed by 11:59 p.m.
+
+Each quiz will contain several multiple choice questions based on course
+readings and lecture material. These quizzes are designed to help you
+keep up with the course readings and lectures, and to provide you with
+the opportunity to assess your mastery of the theories we are covering
+in the course.
 
 \hypertarget{writing_assignments}{%
 \subsection{Four (4) Analytical Response Papers (60\% of Final
@@ -607,7 +614,7 @@ skills. The papers will require you to be analytical and to reflect
 deeply on the theoretical works we will cover. Additional instructions
 about the response papers will be distributed in class during the second
 week of instruction.
-\textcolor{blue}{Each paper must be turned in no later than 11:30 p.m. on the day that it is due.}
+\textcolor{cyan}{Each paper must be turned in no later than 11:30 p.m. on the day that it is due.}
 Moreover, please also note that you have options for each paper
 assignment; this means that for each paper assignment you can choose to
 write between two sets of theories. Moreover, you have the opportunity
@@ -615,7 +622,7 @@ to re-write up to \textbf{two} of your first three lower-scored
 analytical response papers for a higher grade. If you decide to rewrite
 one or two lower-scored papers, these will be due in class on
 \textbf{Tuesday, December 13, 2022 (our ``final exam'' due date) no
-later than 11:59 p.m. (Pacific Standard Time).}
+later than 11:59 p.m.}
 
 \textbf{Due dates for all papers are listed below:}
 
